--- a/ghi/public/index.html
+++ b/ghi/public/index.html
@@ -18,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>RecipeHunt</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
